--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.0",
+    "bootstrap-icons": "^1.10.5",
     "vue": "^3.3.4"
   },
   "devDependencies": {
